# npycomplex

./: environment.yml  main.c  main.pyx  meson.build
.github/workflows/: build.yml
c/: meson.build  npycomplex.c
cython/: meson.build  npycomplex.pyx
lib/: print.c  print.h
